# moss-engine

./: CMakeLists.txt  MossEngine.sln
MossEngine/: MossEngine.vcxproj  MossEngine.vcxproj.filters
MossEngine/res/shaders/: Basic.shader
MossEngine/src/: Application.cpp  Color.hpp  ConsoleColor.h  IndexBuffer.cpp  IndexBuffer.h  Logger.h  Logger.hpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/: Camera.cpp  CircleRenderSystem.h  CollisionSystem.cpp  CollisionSystem.h  Component.h  ComponentPool.h  Entity.h  Main.cpp  MovementSystem.h  SpriteRenderSystem.h  System.h  TextureManager.cpp  TextureManager.h  World.h
src/components/: CollisionComponent.h  PositionComponent.h  RigidbodyComponent.h  SpriteRenderComponent.h  VelocityComponent.h
src/core/: Component.h  ComponentPoolBase.h  World.cpp  World.h
src/systems/: CollisionSystem.cpp  CollisionSystem.h  MovementSystem.h  SpriteRenderSystem.h
src/utils/: Camera.cpp  Camera.h  ConsoleColor.h  Logger.cpp  Logger.h  TextureManager.cpp  TextureManager.h
